[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taln"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Sina Booeshaghi", email = "sinab@berkeley.edu" },
]
maintainers = [
  { name = "Sina Booeshaghi", email = "sinab@berkeley.edu" },
]

dependencies = [
    "tiktoken",
    "unidecode",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[project.scripts]
taln = "taln.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E203"]
